--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "miragesoft/yiipress",
+    "name": "miragesoft/yii2-yiipress",
     "version": "dev-master",
     "description": "CMS based on Yii2 Framework - Development package",
     "keywords": ["yiipress"],
