--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "homepage": "https://github.com/miragesoft/yii2-yiipress",
     "type": "yii2-extension",
     "license": "GNU GPL V3",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "support": {
         "source": "https://github.com/miragesoft/yii2-yiipress.git",
         "issues": "https://github.com/miragesoft/yii2-yiipress/issues"
@@ -26,7 +26,7 @@
     },
     "autoload": {
         "psr-4": {
-            "mirage\\yiipress\\": "/"
+            "mirage\\yiipress\\": ""
         }
     },
     "extra": {
