--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": "*",
+        "dmstr/yii2-adminlte-asset": "2.*",
         "miragesoft/yii2-user": "dev-master",
         "miragesoft/yii2-basicfilemanager": "dev-master"
     },
