--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "*",
         "dmstr/yii2-adminlte-asset": "2.*",
-        "dektrium/yii2-user": "0.9.*@dev"
+        "miragesoft/yii2-user": "dev-master"
     },
     "autoload": {
         "psr-4": {
