--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "*",
         "dmstr/yii2-adminlte-asset": "2.*",
+        "mdmsoft/yii2-admin": "~2.0",
         "miragesoft/yii2-basicfilemanager": "*",
         "miragesoft/yii2-user": "*"
     },
